css resp changes

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ h4 {
   .container-skills h6 {
     text-align: center; }
   .container-skills ul {
-    font-size: 4em;
+    font-size: 3em;
     list-style: none;
     display: inline-block;
     padding-top: 2%; }
@@ -250,7 +250,7 @@ h4 {
   .container-skills a p {
     font-size: 4em;
     color: #6C0305;
-    padding-top: 1%; }
+    padding-top: 15px; }
   .container-skills .fa {
     padding-left: 75px; }
 
