--- a/styles.scss
+++ b/styles.scss
@@ -350,7 +350,7 @@ h4 {
   }
 
   ul {
-    font-size: 4em;
+    font-size: 3em;
     list-style: none;
     display: inline-block;
     padding-top: 2%;
@@ -376,8 +376,9 @@ h4 {
   a p {
     font-size: 4em;
     color: #6C0305;
-    padding-top: 1%;
+    padding-top: 15px;
   }
+  
   .fa {
     padding-left: 75px;
   }
