--- a/styles.scss
+++ b/styles.scss
@@ -224,7 +224,7 @@ h4 {
 }
 
 .ch-img-1 {
-	background-image: url(img/jeopardy-Logo.jpg);
+	background-image: url(img/Jeopardy-Logo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -378,7 +378,7 @@ h4 {
     color: #6C0305;
     padding-top: 15px;
   }
-  
+
   .fa {
     padding-left: 75px;
   }
