--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ h4 {
   transition: all 0.4s ease-in-out; }
 
 .ch-img-1 {
-  background-image: url(img/jeopardy-Logo.jpg);
+  background-image: url(img/Jeopardy-Logo.jpg);
   background-repeat: no-repeat;
   background-size: cover; }
 
