--- a/styles.scss
+++ b/styles.scss
@@ -38,7 +38,7 @@ h4 {
   li {
     list-style: none;
     display: inline-block;
-    margin-left: 9%;
+    margin-left: 6.8%;
   }
   a {
     font-size: 2em;
@@ -202,7 +202,19 @@ h4 {
 .ch-grid li {
   width: 24%;
   height: 263px;
+  padding-right: 1%;
   display: inline-block;
+  p {
+    padding-top: 2%;
+  }
+  h5 {
+    padding-top: 2%;
+    font-size: 1.2em;
+  }
+  a {
+    color: #6C0305;
+    font-size: 1.5em;
+  }
 }
 
 .ch-item {
@@ -230,7 +242,7 @@ h4 {
 }
 
 .ch-img-2 {
-	background-image: url(https://drscdn.500px.org/photo/4116933/q%3D80_m%3D1500/54a28153694cbf949dc3d925e78c4ecc);
+	background-image: url(http://33.media.tumblr.com/a4550e4814f02d708f80e45bcf1296d9/tumblr_inline_nm6gm1BtZS1tpacqz.gif);
   background-repeat: no-repeat;
   background-size: cover;
 }
