add a new resume

--- a/styles.css
+++ b/styles.css
@@ -242,10 +242,11 @@ h4 {
   .container-skills h6 {
     text-align: center; }
   .container-skills ul {
-    font-size: 3em;
+    font-size: 3.5em;
     list-style: none;
     display: inline-block;
-    padding-top: 2%; }
+    padding-top: 2%;
+    text-align: center; }
     .container-skills ul li {
       display: inline-block;
       font-size: 2.5em;
@@ -257,7 +258,7 @@ h4 {
   .container-skills a {
     text-decoration: none; }
   .container-skills a p {
-    font-size: 4em;
+    font-size: 4.5em;
     color: #6C0305;
     padding-top: 15px; }
   .container-skills .fa {
