--- a/styles.scss
+++ b/styles.scss
@@ -362,10 +362,11 @@ h4 {
   }
 
   ul {
-    font-size: 3em;
+    font-size: 3.5em;
     list-style: none;
     display: inline-block;
     padding-top: 2%;
+    text-align: center;
 
     li {
       display: inline-block;
@@ -386,7 +387,7 @@ h4 {
   }
 
   a p {
-    font-size: 4em;
+    font-size: 4.5em;
     color: #6C0305;
     padding-top: 15px;
   }
